# Nameral-System-Converter

./: CMakeLists.txt  README.md  main.c
include/: numeral_system.c  numeral_system.h
src/: main.c
